style: fix broken styles with bootstrap cdn and bootstrap overrides

--- a/less/site.less
+++ b/less/site.less
@@ -1,11 +1,5 @@
 // @import "bootstrap/bootstrap.less";
-
-// Variables needed for compilation after removing bootstrap -- this is just so that the less compiler does not error out
-@baseLineHeight: 18px;
-@white: #fff;
-@grayLight: #999;
-@gridColumnWidth: 60px;
-@gridGutterWidth: 20px;
+@import "manual-bootstrap-overrides.less";
 
 /********** Universal rules for font and color **********/
 @import "datasetupdate.less";
